--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "url": "https://github.com/TeamWorkEpam/Shop/issues"
   },
   "homepage": "https://github.com/TeamWorkEpam/Shop#readme",
-  "description": ""
+  "description": "test"
 }
