--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "npm": "^3.3.12"
   },
   "devDependencies": {
+    "browser-sync": "^2.10.0",
     "connect": "^3.4.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^1.0.1",
     "gulp-imagemin": "^2.4.0",
@@ -15,8 +17,15 @@
     "gulp-livereload": "^3.8.1",
     "gulp-myth": "^1.1.0",
     "gulp-ruby-sass": "^2.0.5",
+    "gulp-sass": "^2.1.0",
+    "gulp-server-livereload": "^1.5.4",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.1.0",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "gulp-watch": "^4.3.5",
+    "gulp-webserver": "^0.9.1",
+    "imagemin-pngquant": "^4.2.0",
+    "rimraf": "^2.4.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
