--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-myth": "^1.1.0",
+    "gulp-react": "^3.1.0",
     "gulp-rigger": "^0.5.8",
     "gulp-ruby-sass": "^2.0.5",
     "gulp-sass": "^2.1.0",
