--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "main": "canvas.js",
   "dependencies": {
+    "babel-preset-react": "^6.1.18",
+    "babelify": "^7.2.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-concat": "^2.6.0",
     "imagemin-pngquant": "^4.2.0",
     "npm": "^3.3.12",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "rimraf": "^2.4.3"
   },
   "devDependencies": {
