--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
+    "del": "^2.1.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.0",
     "imagemin-pngquant": "^4.2.0",
@@ -14,10 +15,12 @@
     "rimraf": "^2.4.3"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
     "browser-sync": "^2.10.0",
     "connect": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^1.0.1",
     "gulp-imagemin": "^2.4.0",
