--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.4",
-    "react": "~0.14.3"
+    "react": "~0.14.3",
+    "react-router": "~1.0.0"
   }
 }
