--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
+    "babelify": "^7.2.0",
     "browser-sync": "^2.10.0",
+    "browserify": "^12.0.1",
     "connect": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^1.0.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-myth": "^1.1.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-react": "^3.1.0",
     "gulp-rigger": "^0.5.8",
     "gulp-ruby-sass": "^2.0.5",
@@ -38,7 +42,10 @@
     "gulp-watch": "^4.3.5",
     "gulp-webserver": "^0.9.1",
     "imagemin-pngquant": "^4.2.0",
-    "rimraf": "^2.4.3"
+    "plumber": "^0.4.8",
+    "react-dom": "^0.14.3",
+    "rimraf": "^2.4.3",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
