--- a/package.json
+++ b/package.json
@@ -1,66 +1,21 @@
 {
-  "name": "123",
-  "version": "1.0.0",
-  "main": "canvas.js",
+  "name": "globalTask",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "babel-preset-react": "^6.1.18",
-    "babelify": "^7.2.0",
-    "del": "^2.1.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-concat": "^2.6.0",
-    "imagemin-pngquant": "^4.2.0",
-    "npm": "^3.3.12",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "rimraf": "^2.4.3"
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "hbs": "~3.1.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.10.0",
-    "browserify": "^12.0.1",
-    "connect": "^3.4.0",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-csso": "^1.0.1",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-myth": "^1.1.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-react": "^3.1.0",
-    "gulp-rigger": "^0.5.8",
-    "gulp-ruby-sass": "^2.0.5",
-    "gulp-sass": "^2.1.0",
-    "gulp-server-livereload": "^1.5.4",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-stylus": "^2.1.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-watch": "^4.3.5",
-    "gulp-webserver": "^0.9.1",
-    "imagemin-pngquant": "^4.2.0",
-    "plumber": "^0.4.8",
-    "react-dom": "^0.14.3",
-    "rimraf": "^2.4.3",
-    "run-sequence": "^1.1.5",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TeamWorkEpam/Shop.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TeamWorkEpam/Shop/issues"
-  },
-  "homepage": "https://github.com/TeamWorkEpam/Shop#readme",
-  "description": "test"
+    "mocha": "^2.3.4",
+    "request": "^2.67.0"
+  }
 }
