--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "hbs": "~3.1.0",
+    "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
-  },
-  "devDependencies": {
-    "mocha": "^2.3.4",
-    "request": "^2.67.0"
   }
 }
