--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "react": "~0.14.3",
-    "react-router": "~1.0.0"
+    "react-router": "~1.0.0",
+    "eventEmitter": "~4.3.0"
   }
 }
